--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.example.student.sdms"
         minSdkVersion 15
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.android.support:support-core-utils:24.2.1'
     compile 'com.google.firebase:firebase-ads:10.2.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'net.gotev:uploadservice:2.1'
+    compile 'in.gauriinfotech:commons:1.0.8'
     testCompile 'junit:junit:4.12'
+
 }
 apply plugin: 'com.google.gms.google-services'
